# season3-onboarding2-team1

./: .env  .gitignore  README.md  baseline.py  demo.py  demo_1.py  demo_upload.py  main.py  openai_api.py  pyproject.toml  start.py
router/: test_router.py
